--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,330 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Main from "../layouts/Main.astro";
+import Loader from "../components/Loader.astro";
+import Navbar from "../components/Navbar.astro";
+import Swiper from "../components/swiper.astro";
+import Page1 from "../components/Pages/Page1.astro";
+import Page2 from "../components/Pages/Page2.astro";
+import Page3 from "../components/Pages/Page3.astro";
+import Page4 from "../components/Pages/Page4.astro";
+import Page5 from "../components/Pages/Page5.astro";
+import Footer from "../components/Footer.astro";
+import Featured from "../components/Featured.astro";
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<Main>
+  <div id="main">
+    <Loader />
+    <div id="page1">
+      <div id="cursor">
+        <h3>Play Reel</h3>
+      </div>
+      <video autoplay muted loop src="/videos/RJ-2.0-Video background .mp4"
+      ></video>
+    </div>
+    <Navbar />
+  </div>
+  <Page1 />
+  <Page2 />
+  <Page3 />
+  <Page4 />
+  <Featured />
+  <Page5 />
+
+  <div id="page6-content">
+    <h1>Get In touch.</h1>
+    <hr />
+
+    <!-- Swiper -->
+
+    <Swiper />
+  </div>
+  <Footer />
+</Main>
+
+<!-- Page-specific scripts -->
+<script
+  is:inline
+  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
+  integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"></script>
+<script is:inline src="https://unpkg.com/split-type"></script>
+<script
+  is:inline
+  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"
+  integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"></script>
+<script
+  is:inline
+  src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"
+></script>
+<script
+  is:inline
+  src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script is:inline>
+  function cursoreffect() {
+    const cursor = document.querySelector("#cursor");
+    const body = document.querySelector("#page1-content");
+
+    body.addEventListener("mousemove", function (dets) {
+      gsap.to(cursor, {
+        x: dets.x,
+        y: dets.y,
+      });
+    });
+    body.addEventListener("mouseenter", function (dets) {
+      gsap.to(cursor, {
+        scale: 1,
+        opacity: 1,
+      });
+    });
+    body.addEventListener("mouseleave", function (dets) {
+      gsap.to(cursor, {
+        scale: 0,
+        opactiy: 0,
+      });
+    });
+  }
+  cursoreffect();
+
+  //   function anime0() {
+  //     // var page1h1=document.querySelector("#loader h2");
+  //     // const text=new SplitType('#loader h2');
+  //     gsap.from("#loader h2", {
+  //       x: 100,
+  //       opacity: 0,
+  //       stagger: 2,
+  //       // delay:4,
+  //       duration: 5,
+  //     });
+  //     gsap.to("#loader h2", {
+  //       x: -100,
+  //       opacity: 0,
+  //       // stagger:2,
+  //       // delay:3,
+  //       // duration:2,
+  //     });
+  //     gsap.to("#loader", {
+  //       x: -100,
+  //       delay: 4,
+  //       opacity: 0,
+  //       // stagger:2,
+  //       // delay:0.6,
+  //       // duration:2,
+  //     });
+  //   }
+  //   anime0();
+
+  function page1anime() {
+    var page1h1 = document.querySelector(".rejouice1");
+    // console.log(page1h1);
+    const text = new SplitType(".rejouice1");
+
+    gsap.from(".char", {
+      y: 100,
+      opacity: 0,
+      stagger: 0.09,
+      delay: 5,
+      // duration:.1,
+    });
+    // alert("chlra hu ")
+  }
+  page1anime();
+
+  function smoothscroll() {
+    const lenis = new Lenis();
+
+    lenis.on("scroll", (e) => {
+      console.log(e);
+    });
+
+    function raf(time) {
+      lenis.raf(time);
+      requestAnimationFrame(raf);
+    }
+
+    requestAnimationFrame(raf);
+  }
+  smoothscroll();
+
+  function page2anime() {
+    gsap.from("hr", {
+      x: -3000,
+      // stagger:0.25,
+      opacity: 0,
+      // delay:2,
+      // duration:3,
+      scrollTrigger: {
+        trigger: "#page2",
+        start: "top 90%",
+        end: "top 60%",
+        scrub: 3,
+        // markers:true
+      },
+    });
+    gsap.from("#anim2", {
+      y: 150,
+      stagger: 0.25,
+      opacity: 0,
+      // delay:1,
+      // duration:4,
+      scrollTrigger: {
+        trigger: "#page2",
+        start: "top 90%",
+        end: "top center",
+        scrub: 3,
+        // markers:true
+      },
+    });
+
+    // alert("chlra hu ")
+  }
+  page2anime();
+
+  function anim3() {
+    gsap.from("#anim3", {
+      y: 150,
+      stagger: 0.25,
+      opacity: 0,
+      // delay:1,
+      // duration:4,
+      scrollTrigger: {
+        trigger: "#page3",
+        start: "top 90%",
+        end: "top center",
+        scrub: 2,
+        // markers:true
+      },
+    });
+  }
+  anim3();
+  function anim5() {
+    gsap.from("#anim5", {
+      y: 150,
+      stagger: 0.25,
+      opacity: 0,
+      // delay:1,
+      // duration:4,
+      scrollTrigger: {
+        trigger: "#page5",
+        start: "top 90%",
+        end: "top center",
+        scrub: 2,
+        // markers:true
+      },
+    });
+    gsap.from(".abs", {
+      rotate: 360,
+      //   stagger: 0.25,
+
+      //   opacity: 0,
+      delay: 10,
+      duration: 20,
+      scrollTrigger: {
+        trigger: ".abs",
+        start: "top 50%",
+        end: "top 0",
+        scrub: 2,
+        // markers: true,
+      },
+    });
+  }
+  anim5();
+  function anim6() {
+    gsap.from("#anim6", {
+      x: 150,
+      stagger: 0.3,
+      opacity: 0,
+      // delay:1,
+      // duration:4,
+      scrollTrigger: {
+        trigger: "#page6",
+        start: "top 40%",
+        end: "top center",
+        scrub: 6,
+        // markers:true
+      },
+    });
+  }
+  anim6();
+
+  var swiper = new Swiper(".mySwiper", {
+    slidesPerView: window.innerWidth < 790 ? 1 : 4,
+    spaceBetween: 10,
+    loop: true,
+    autoplay: {
+      delay: 2500,
+      disableOnInteraction: false,
+    },
+
+    // navigation: {
+    //   nextEl: ".swiper-button-next",
+    //   prevEl: ".swiper-button-prev",
+    // },
+  });
+
+  //   function end(){
+  //     gsap.from("#last",{
+  //         y:-100,
+  //         opacity:0,
+  //         stagger:1,
+  //         delay:0.3,
+  //         scrollTrigger:{
+  //             trigger:'#content',
+  //             start:'top 10%',
+  //             end:'end 60%',
+  //             scrub:true,
+  //             markers:true
+  //         }
+  //         // duration:.1,
+
+  //     })
+  //     // alert("chlra hu ")
+  // }
+  // end();
+
+  function animend() {
+    gsap.from("#animend .last", {
+      y: -100,
+      opacity: 0,
+      stagger: 0.09,
+      delay: 0.3,
+      scrollTrigger: {
+        trigger: "#content",
+        start: window.innerWidth < 768 ? "top 30%" : "top 20%",
+        end: "end 50%",
+        scrub: 3,
+        // markers: true,
+      },
+      // duration:.1,
+    });
+    // alert("chlra hu ")
+  }
+  animend();
+  function cursoreffect2() {
+    const cursor = document.querySelector("#cursor2");
+    const body = document.querySelector("#page5-content");
+
+    body.addEventListener("mousemove", function (dets) {
+      gsap.to(cursor, {
+        x: dets.x - 650,
+        y: dets.y - 350,
+      });
+    });
+    body.addEventListener("mouseenter", function (dets) {
+      gsap.to(cursor, {
+        scale: 1,
+        opacity: 1,
+      });
+    });
+    body.addEventListener("mouseleave", function (dets) {
+      gsap.to(cursor, {
+        scale: 0,
+        opactiy: 0,
+      });
+    });
+  }
+  cursoreffect2();
+</script>
