--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,14 +26,11 @@
   </div>
   <div id="content">
     <div id="animend">
-      <div class="last">r</div>
-      <div class="last">e</div>
-      <div class="last">j</div>
-      <div class="last">o</div>
-      <div class="last">u</div>
+      <div class="last">a</div>
       <div class="last">i</div>
-      <div class="last">c</div>
-      <div class="last">e</div>
+      <div class="last">k</div>
+      <div class="last">y</div>
+      <div class="last">a</div>
     </div>
   </div>
 </div>
